2019 + 2018 hams in one graph

--- a/ham/index.html
+++ b/ham/index.html
@@ -11778,7 +11778,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Temperature-curve-for-2018-Christmas-Ham">Temperature curve for 2018 Christmas Ham<a class="anchor-link" href="#Temperature-curve-for-2018-Christmas-Ham">&#182;</a></h2><p>125 Degrees Celsius oven temperature</p>
+<h2 id="Temperature-curve-for-2018-Christmas-Ham">Temperature curves for Christmas hams 2018-2019<a class="anchor-link" href="#Temperature-curve-for-2018-Christmas-Ham">&#182;</a></h2><p>125 Degrees Celsius oven temperature</p>
 <ul>
 <li>2018 with foil</li>
 <li>2019 without foil</li>
